# zuid

./: .bumpversion.cfg  README.md  gen.py  pyproject.toml  tox.ini
tests/: test_zuid.py
zuid/: __init__.py  zuid.py
